# yolo

./: .gitignore  AGENTS.md  README.md  memory.md  pyproject.toml  requirements.txt  upload.py
configs/: bev.yaml  camera.yaml  depth.yaml  detection.yaml  mapping.yaml  perception.yaml  planner.yaml  potential.yaml  scene_segmentation.yaml  segmentation.yaml  trajectory.yaml
memory-bank/: active-context.md  progress.md  project-brief.md  research-notes.md  system-architecture.md  technical-decisions.md
scripts/: evaluate_planner.py  render_path_overlay.py  run_depth.py  run_detection.py  run_perception.py  run_scene_segmentation.py  run_segmentation.py
src/: cli.py  video_plan.py  video_runner.py
tests/: test_auto_free_cells.py  test_backprojection.py  test_bev_config.py  test_bev_rasterizer.py  test_bev_visualization.py  test_camera_geometry.py  test_depth_estimator.py  test_depth_output.py  test_depth_postprocessing.py  test_depth_visualization.py  test_detection_format.py  test_hybrid_planner.py  test_imports.py  test_io_utils.py  test_mapping.py  test_path_image_overlay.py  test_perception_bev_integration.py  test_perception_depth_integration.py  test_perception_fusion.py  test_perception_mapping_integration.py  test_perception_pipeline.py  test_perception_potential_integration.py  test_perception_scene_integration.py  test_perception_schema.py  test_planner.py  test_planner_evaluation.py  test_planner_path_reuse.py  test_potential.py  test_scene_class_mapping.py  test_scene_output.py  test_scene_postprocessing.py  test_scene_segmentation_schema.py  (+5 more)
(+66 files in other folders)
